RESOLVED FIXED53519
REGRESSION(77082): GC-related crashes seen: on WebKit2 bot; on GTK 32bit bot; loading trac pages; typing in search field
https://bugs.webkit.org/show_bug.cgi?id=53519
Summary REGRESSION(77082): GC-related crashes seen: on WebKit2 bot; on GTK 32bit bot;...
Geoffrey Garen
Reported 2011-02-01 12:12:27 PST
REGRESSION: GC-related crashes seen: on WebKit2 bot; on GTK 32bit bot; loading trac pages; typing in search field
Attachments
Patch (2.03 KB, patch)
2011-02-01 12:25 PST, Geoffrey Garen
oliver: review+
Geoffrey Garen
Comment 1 2011-02-01 12:25:07 PST
Oliver Hunt
Comment 2 2011-02-01 12:26:30 PST
Comment on attachment 80801 [details] Patch bugger. r=me.
Geoffrey Garen
Comment 3 2011-02-01 12:44:29 PST
Geoffrey Garen
Comment 4 2011-02-01 12:46:35 PST
Geoffrey Garen
Comment 5 2011-02-01 13:08:27 PST
*** Bug 53486 has been marked as a duplicate of this bug. ***
Geoffrey Garen
Comment 6 2011-02-01 13:08:36 PST
*** Bug 53504 has been marked as a duplicate of this bug. ***
Geoffrey Garen
Comment 7 2011-02-01 13:36:26 PST
*** Bug 53518 has been marked as a duplicate of this bug. ***
Geoffrey Garen
Comment 8 2011-02-01 13:36:33 PST
*** Bug 53517 has been marked as a duplicate of this bug. ***
Geoffrey Garen
Comment 9 2011-02-01 13:36:41 PST
*** Bug 53413 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 10 2011-02-01 22:03:44 PST
*** Bug 53545 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 11 2011-02-01 22:04:45 PST
*** Bug 53543 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 12 2011-02-01 22:06:15 PST
*** Bug 53533 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.